@@ -19,6 +19,7 @@
  */
 package org.zaproxy.zap.extension.openapi;
 
+import com.fasterxml.jackson.databind.JsonMappingException;
 import io.swagger.v3.core.util.Json;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.parser.core.models.SwaggerParseResult;
@@ -27,6 +28,7 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -35,6 +37,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.regex.Pattern;
 import org.apache.commons.httpclient.URI;
+import org.apache.commons.io.FileUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.parosproxy.paros.CommandLine;
@@ -58,6 +61,7 @@ import org.parosproxy.paros.network.HttpMessage;
 import org.parosproxy.paros.network.HttpSender;
 import org.parosproxy.paros.view.View;
 import org.zaproxy.addon.commonlib.ExtensionCommonlib;
+import org.zaproxy.addon.commonlib.ValueProvider;
 import org.zaproxy.addon.commonlib.ui.ProgressPane;
 import org.zaproxy.addon.commonlib.ui.ProgressPanel;
 import org.zaproxy.zap.extension.openapi.OpenApiExceptions.InvalidDefinitionException;
@@ -70,7 +74,7 @@ import org.zaproxy.zap.extension.openapi.network.RequestModel;
 import org.zaproxy.zap.extension.openapi.network.Requestor;
 import org.zaproxy.zap.model.Context;
 import org.zaproxy.zap.model.SessionStructure;
-import org.zaproxy.zap.model.ValueGenerator;
+import org.zaproxy.zap.users.User;
 import org.zaproxy.zap.utils.ThreadUtils;
 import org.zaproxy.zap.view.ZapMenuItem;
 
@@ -83,7 +87,7 @@ public class ExtensionOpenApi extends ExtensionAdaptor implements CommandLineLis
     private static final String THREAD_PREFIX = "ZAP-Import-OpenAPI-";
 
     private static final List<Class<? extends Extension>> DEPENDENCIES =
-            Collections.unmodifiableList(Arrays.asList(ExtensionCommonlib.class));
+            List.of(ExtensionCommonlib.class);
 
     private ZapMenuItem menuImportOpenApi;
     private ImportDialog importDialog;
@@ -102,11 +106,11 @@ public class ExtensionOpenApi extends ExtensionAdaptor implements CommandLineLis
         super(NAME);
     }
 
-    public ValueGenerator getValueGenerator() {
+    public ValueProvider getValueProvider() {
         return Control.getSingleton()
                 .getExtensionLoader()
                 .getExtension(ExtensionCommonlib.class)
-                .getValueGenerator();
+                .getValueProvider();
     }
 
     @Override
@@ -231,13 +235,24 @@ public class ExtensionOpenApi extends ExtensionAdaptor implements CommandLineLis
      */
     public List<String> importOpenApiDefinition(
             final URI uri, final String targetUrl, boolean initViaUi, int contextId) {
-        return this.importOpenApiDefinitionV2(uri, targetUrl, initViaUi, contextId).getErrors();
+        return importOpenApiDefinition(uri, targetUrl, initViaUi, contextId, null);
+    }
+
+    List<String> importOpenApiDefinition(
+            final URI uri, final String targetUrl, boolean initViaUi, int contextId, User user) {
+        return importOpenApiDefinitionV2(uri, targetUrl, initViaUi, contextId, user).getErrors();
     }
 
     public OpenApiResults importOpenApiDefinitionV2(
             final URI uri, final String targetUrl, boolean initViaUi, int contextId) {
+        return importOpenApiDefinitionV2(uri, targetUrl, initViaUi, contextId, null);
+    }
+
+    public OpenApiResults importOpenApiDefinitionV2(
+            final URI uri, final String targetUrl, boolean initViaUi, int contextId, User user) {
         OpenApiResults results = new OpenApiResults();
         Requestor requestor = new Requestor(HttpSender.MANUAL_REQUEST_INITIATOR);
+        requestor.setUser(user);
         requestor.addListener(new HistoryPersister(results));
         try {
             String path = uri.getPath();
@@ -315,14 +330,26 @@ public class ExtensionOpenApi extends ExtensionAdaptor implements CommandLineLis
      */
     public List<String> importOpenApiDefinition(
             final File file, final String targetUrl, boolean initViaUi, int contextId) {
-        return this.importOpenApiDefinitionV2(file, targetUrl, initViaUi, contextId).getErrors();
+        return importOpenApiDefinition(file, targetUrl, initViaUi, contextId, null);
+    }
+
+    List<String> importOpenApiDefinition(
+            final File file, final String targetUrl, boolean initViaUi, int contextId, User user) {
+        return this.importOpenApiDefinitionV2(file, targetUrl, initViaUi, contextId, user)
+                .getErrors();
     }
 
     public OpenApiResults importOpenApiDefinitionV2(
             final File file, final String targetUrl, boolean initViaUi, int contextId) {
+        return importOpenApiDefinitionV2(file, targetUrl, initViaUi, contextId, null);
+    }
+
+    public OpenApiResults importOpenApiDefinitionV2(
+            final File file, final String targetUrl, boolean initViaUi, int contextId, User user) {
         OpenApiResults results = new OpenApiResults();
         try {
             Requestor requestor = new Requestor(HttpSender.MANUAL_REQUEST_INITIATOR);
+            requestor.setUser(user);
             requestor.addListener(new HistoryPersister(results));
 
             if (!file.exists()) {
@@ -343,15 +370,22 @@ public class ExtensionOpenApi extends ExtensionAdaptor implements CommandLineLis
                 throw new InvalidDefinitionException();
             }
 
+            String openApiString;
+            try {
+                openApiString = Json.mapper().writeValueAsString(openApi);
+            } catch (JsonMappingException e) {
+                if (e.getOriginalMessage().contains("TextBuffer overrun")) {
+                    LOGGER.warn(
+                            "Fully resolved definition is too large, trying to use original definition only.");
+                    openApiString = FileUtils.readFileToString(file, StandardCharsets.UTF_8);
+                } else {
+                    throw e;
+                }
+            }
+
             List<String> errors =
                     importOpenApiDefinition(
-                            Json.pretty(openApi),
-                            targetUrl,
-                            null,
-                            initViaUi,
-                            requestor,
-                            contextId,
-                            false);
+                            openApiString, targetUrl, null, initViaUi, requestor, contextId, false);
             results.setErrors(errors);
         } catch (IOException e) {
             if (initViaUi) {
@@ -381,7 +415,7 @@ public class ExtensionOpenApi extends ExtensionAdaptor implements CommandLineLis
 
         final List<String> errors = new ArrayList<>();
         SwaggerConverter converter =
-                new SwaggerConverter(targetUrl, definitionUrl, defn, getValueGenerator());
+                new SwaggerConverter(targetUrl, definitionUrl, defn, getValueProvider());
         Thread t =
                 new Thread(THREAD_PREFIX + threadId++) {
 
@@ -389,15 +423,13 @@ public class ExtensionOpenApi extends ExtensionAdaptor implements CommandLineLis
                     public void run() {
                         ProgressPane currentImportPane = null;
                         try {
-                            List<RequestModel> requestModels = converter.getRequestModels();
-                            if (contextId != -1) {
-                                Context context = getModel().getSession().getContext(contextId);
-                                if (context != null) {
-                                    converter.updateVariantChecks(
-                                            context,
-                                            variantChecksMap.computeIfAbsent(
-                                                    contextId, VariantOpenApiChecks::new));
-                                }
+                            Context context = getModel().getSession().getContext(contextId);
+                            List<RequestModel> requestModels = converter.getRequestModels(context);
+                            if (context != null) {
+                                converter.updateVariantChecks(
+                                        context,
+                                        variantChecksMap.computeIfAbsent(
+                                                contextId, VariantOpenApiChecks::new));
                             }
                             if (requestor == null) {
                                 return;
